native_api_1c_macro/tests/to_build/functions/defaults/blob_type.stderr
error: AddIn function attribute `arg` of type `Blob` cannot have default value
  --> tests/to_build/functions/defaults/blob_type.rs:12:6
   |
12 |     #[arg(Blob, default = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9])]
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
